--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Elmurod Fayzullayev Portfolio</title>
+  <title>Elmurod Fayzullayev</title>
 
   <!--
     - favicon
@@ -47,7 +47,7 @@
         </figure>
 
         <div class="info-content">
-          <h1 class="name" title="Richard hanrick">Elmurod Fayzullayev</h1>
+          <h1 class="name" title="Elmurod Fayzullayev">Elmurod Fayzullayev</h1>
 
           <p class="title">Web developer</p>
         </div>
@@ -199,9 +199,9 @@
             <button class="navbar-link" data-nav-link>Portfolio</button>
           </li>
 
-          <li class="navbar-item">
+          <!-- <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Blog</button>
-          </li>
+          </li> -->
 
           <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Contact</button>
@@ -1015,7 +1015,7 @@
         - #BLOG
       -->
 
-      <article class="blog" data-page="blog">
+      <!-- <article class="blog" data-page="blog">
 
         <header>
           <h2 class="h2 article-title">Blog</h2>
@@ -1197,7 +1197,7 @@
 
         </section>
 
-      </article>
+      </article> -->
 
 
 
